--- a/drop-in-docker/Makefile
+++ b/drop-in-docker/Makefile
@@ -1,7 +1,7 @@
 down:
 	docker-compose down --remove-orphans
-# shell:
-# 	docker-compose exec -u ${UID}:${UID} app sh
+shell:
+	docker-compose exec -u ${UID}:${UID} app sh
 up:
 	docker-compose up --build --remove-orphans -d
 up-f:
