--- a/drop-in-docker/docker-compose.yml
+++ b/drop-in-docker/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - ./vols/mysql/data/:/var/lib/mysql/
   adminer:
     image: adminer:4.7.8-standalone
-    # env_file:
-    #   - ./env/adminer.env
+    env_file:
+      - ./env/adminer.env
     ports:
       - $ADMINER_PORT:8080
   app:
